--- a/Menus/funcionarioFuncoes/MenuAdicionarProdutos.form
+++ b/Menus/funcionarioFuncoes/MenuAdicionarProdutos.form
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Menus.funcionarioFuncoes.MenuAdicionarProdutos">
-  <grid id="27dc6" binding="painelAdicionarProdutos" layout-manager="GridLayoutManager" row-count="12" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="painelAdicionarProdutos" layout-manager="GridLayoutManager" row-count="14" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="456"/>
+      <xy x="20" y="20" width="563" height="542"/>
     </constraints>
-    <properties/>
+    <properties>
+      <preferredSize width="490" height="440"/>
+    </properties>
     <border type="none" title="Adicionar Produtos" title-justification="2" title-position="1"/>
     <children>
       <component id="e0b2b" class="javax.swing.JTextField" binding="fabricanteProdutoText">
         <constraints>
-          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="6" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -18,9 +20,9 @@
           <text value=""/>
         </properties>
       </component>
-      <component id="9898b" class="javax.swing.JTextField" binding="corProduto">
+      <component id="9898b" class="javax.swing.JTextField" binding="corProdutoText">
         <constraints>
-          <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="8" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -28,15 +30,15 @@
       </component>
       <component id="a705f" class="javax.swing.JTextField" binding="estoqueProdutoText">
         <constraints>
-          <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="7" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties/>
       </component>
-      <component id="18faa" class="javax.swing.JTextField" binding="tamanhoProdut">
+      <component id="18faa" class="javax.swing.JTextField" binding="tamanhoProdutoText">
         <constraints>
-          <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="9" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -44,21 +46,9 @@
           <text value=""/>
         </properties>
       </component>
-      <component id="e7cb9" class="javax.swing.JComboBox" binding="tiposProdutosBox">
-        <constraints>
-          <grid row="0" column="0" row-span="4" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <model>
-            <item value="Remédios"/>
-            <item value="Higiénicos"/>
-            <item value="Cosméticos"/>
-          </model>
-        </properties>
-      </component>
       <component id="95648" class="javax.swing.JTextField" binding="precoProdutoText">
         <constraints>
-          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="5" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -66,7 +56,7 @@
       </component>
       <component id="6f51d" class="javax.swing.JTextField" binding="nomeProdutoText">
         <constraints>
-          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -74,39 +64,44 @@
       </component>
       <component id="f1fa7" class="javax.swing.JLabel" binding="nome">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Arial Black" style="1"/>
           <text value="Nome:"/>
         </properties>
       </component>
       <component id="bf79c" class="javax.swing.JLabel" binding="preco">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Arial Black" style="1"/>
           <text value="Preço"/>
         </properties>
       </component>
       <component id="122eb" class="javax.swing.JLabel" binding="fabricante">
         <constraints>
-          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <focusable value="true"/>
+          <font name="Arial Black" style="1"/>
           <text value="Fabricante"/>
         </properties>
       </component>
       <component id="3a7e6" class="javax.swing.JLabel" binding="estoque">
         <constraints>
-          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Arial Black" style="1"/>
           <text value="Estoque"/>
         </properties>
       </component>
       <component id="8d125" class="javax.swing.JComboBox" binding="tarjaBox">
         <constraints>
-          <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="10" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <model>
@@ -114,35 +109,39 @@
             <item value="Preta"/>
             <item value="Branca"/>
           </model>
+          <toolTipText value="&lt;html&gt;&#10;Vermelha - Pode comprar apenas com receita&lt;br&gt;&#10;Branca - Qualquer um pode comrpar&lt;br&gt;&#10;Preta - Pode comprar apenas com receita e sendo maior de 18&#10;&lt;/html&gt;"/>
         </properties>
       </component>
       <component id="2fcad" class="javax.swing.JLabel" binding="tarja">
         <constraints>
-          <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Arial Black" style="1"/>
           <text value="Tarja"/>
         </properties>
       </component>
       <component id="6714" class="javax.swing.JLabel" binding="tamanho">
         <constraints>
-          <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Arial Black" style="1"/>
           <text value="Tamanho"/>
         </properties>
       </component>
-      <component id="2300c" class="javax.swing.JLabel">
+      <component id="2300c" class="javax.swing.JLabel" binding="cor">
         <constraints>
-          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Arial Black" style="1"/>
           <text value="Cor"/>
         </properties>
       </component>
       <component id="1e4d4" class="javax.swing.JComboBox" binding="resistenciaAguaBox">
         <constraints>
-          <grid row="11" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="11" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <model>
@@ -153,10 +152,56 @@
       </component>
       <component id="53fff" class="javax.swing.JLabel" binding="resistenciaAgua">
         <constraints>
-          <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Resistencia Agua"/>
+          <font name="Arial Black" style="1"/>
+          <text value="Res. Agua"/>
+          <toolTipText value="Resistência a água"/>
+        </properties>
+      </component>
+      <vspacer id="2275c">
+        <constraints>
+          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+      <component id="efc86" class="javax.swing.JButton" binding="confirmar">
+        <constraints>
+          <grid row="13" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="120" height="40"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Confirmar"/>
+        </properties>
+      </component>
+      <component id="62dd" class="javax.swing.JLabel" binding="informacao">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="4" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="174" height="83"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Arial Black" style="1"/>
+          <text value="Preencha os campos abaixo"/>
+        </properties>
+      </component>
+      <component id="e7cb9" class="javax.swing.JComboBox" binding="tiposProdutosBox">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Arial" style="1"/>
+          <foreground color="-2058426"/>
+          <inheritsPopupMenu value="false"/>
+          <model>
+            <item value="Remédios"/>
+            <item value="Higiénicos"/>
+            <item value="Cosméticos"/>
+          </model>
+          <opaque value="true"/>
+          <toolTipText value="Clique para ver mais opções"/>
+          <visible value="true"/>
         </properties>
       </component>
     </children>
