--- a/Menus/MenuLogin.form
+++ b/Menus/MenuLogin.form
@@ -6,111 +6,93 @@
       <xy x="22" y="20" width="640" height="480"/>
     </constraints>
     <properties>
-      <maximumSize width="800" height="640"/>
-      <minimumSize width="640" height="480"/>
-      <preferredSize width="500" height="480"/>
+      <maximumSize width="-1" height="-1"/>
+      <minimumSize width="-1" height="-1"/>
+      <preferredSize width="400" height="300"/>
     </properties>
-    <border type="none"/>
+    <border type="none" title="" title-justification="2"/>
     <children>
-      <component id="22493" class="javax.swing.JLabel" binding="informacao">
+      <vspacer id="e1a6c">
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <alignmentX value="0.0"/>
-          <alignmentY value="0.0"/>
-          <autoscrolls value="false"/>
-          <horizontalAlignment value="10"/>
-          <iconTextGap value="4"/>
-          <text value="Preencha os campos abaixo corretamente para efetuar o login"/>
-        </properties>
-      </component>
-      <component id="7af0e" class="javax.swing.JButton" binding="voltarButton" default-binding="true">
-        <constraints>
-          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="200" height="40"/>
-            <maximum-size width="300" height="40"/>
+          <grid row="0" column="3" row-span="5" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="40" height="-1"/>
           </grid>
         </constraints>
-        <properties>
-          <selected value="false"/>
-          <text value="Voltar"/>
-          <verticalAlignment value="0"/>
-        </properties>
-      </component>
-      <component id="34d14" class="javax.swing.JPasswordField" binding="senha">
+      </vspacer>
+      <vspacer id="1e61c">
         <constraints>
-          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <maximum-size width="350" height="20"/>
+          <grid row="0" column="0" row-span="5" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="10" height="-1"/>
           </grid>
         </constraints>
-        <properties>
-          <text value=""/>
-        </properties>
-      </component>
-      <component id="49ff0" class="javax.swing.JLabel" binding="bemVindo">
+      </vspacer>
+      <hspacer id="61917">
         <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <font name="Arial Black" style="1"/>
-          <text value="Bem Vindo! "/>
-        </properties>
-      </component>
-      <component id="5247" class="javax.swing.JTextField" binding="Login">
-        <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <maximum-size width="350" height="20"/>
+          <grid row="5" column="0" row-span="1" col-span="4" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="10"/>
           </grid>
         </constraints>
-        <properties>
-          <text value=""/>
-          <visible value="true"/>
-        </properties>
-      </component>
-      <component id="9f265" class="javax.swing.JButton" binding="Logar">
+      </hspacer>
+      <component id="41c87" class="javax.swing.JButton" binding="Logar">
         <constraints>
-          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="200" height="40"/>
-            <maximum-size width="300" height="40"/>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="2" indent="1" use-parent-layout="false">
+            <preferred-size width="200" height="-1"/>
           </grid>
         </constraints>
         <properties>
           <text value="Entrar"/>
         </properties>
       </component>
-      <component id="3b87a" class="javax.swing.JLabel">
+      <component id="3b5a8" class="javax.swing.JPasswordField" binding="senha">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="86165" class="javax.swing.JTextField" binding="Login">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="eb5ae" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Login"/>
         </properties>
       </component>
-      <component id="63451" class="javax.swing.JLabel">
+      <component id="e867b" class="javax.swing.JLabel">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="38" height="38"/>
-          </grid>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Senha"/>
         </properties>
       </component>
-      <vspacer id="5860a">
+      <component id="a2e6b" class="javax.swing.JLabel" binding="bemVindo">
         <constraints>
-          <grid row="0" column="0" row-span="6" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <preferred-size width="30" height="-1"/>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="&lt;html&gt; &lt;h1&gt;&lt;center&gt;Bem Vindo!&lt;/h1&gt;&lt;/center&gt; &lt;br&gt;Preencha os campos abaixo corretamente&lt;br&gt; &lt;center&gt;para efetuar o login&lt;/center&gt;&#10;&lt;/html&gt;"/>
+        </properties>
+      </component>
+      <component id="b3dc" class="javax.swing.JButton" binding="voltarButton" default-binding="true">
+        <constraints>
+          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="2" indent="1" use-parent-layout="false">
+            <preferred-size width="200" height="-1"/>
           </grid>
         </constraints>
-      </vspacer>
-      <vspacer id="6ddd5">
-        <constraints>
-          <grid row="0" column="3" row-span="6" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <preferred-size width="10" height="-1"/>
-          </grid>
-        </constraints>
-      </vspacer>
+        <properties>
+          <text value="Voltar"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
