--- a/Menus/MenuLogin.form
+++ b/Menus/MenuLogin.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Menus.MenuLogin">
-  <grid id="27dc6" binding="PainelLogin" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="PainelLogin" layout-manager="GridLayoutManager" row-count="10" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="22" y="20" width="640" height="480"/>
@@ -8,26 +8,27 @@
     <properties>
       <maximumSize width="800" height="640"/>
       <minimumSize width="640" height="480"/>
-      <preferredSize width="500" height="480"/>
+      <preferredSize width="480" height="280"/>
     </properties>
     <border type="none"/>
     <children>
       <component id="22493" class="javax.swing.JLabel" binding="informacao">
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <alignmentX value="0.0"/>
           <alignmentY value="0.0"/>
           <autoscrolls value="false"/>
+          <font name="Arial Black" style="1"/>
           <horizontalAlignment value="10"/>
           <iconTextGap value="4"/>
-          <text value="Preencha os campos abaixo corretamente para efetuar o login"/>
+          <text value="&lt;html&gt; &lt;h1&gt;&lt;center&gt;Bem Vindo!&lt;/h1&gt;&lt;/center&gt; &lt;br&gt;Preencha os campos abaixo corretamente&lt;br&gt; &lt;center&gt;para efetuar o login&lt;/center&gt;&#10;&lt;/html&gt;&#10;&#10;&#10;"/>
         </properties>
       </component>
       <component id="7af0e" class="javax.swing.JButton" binding="voltarButton" default-binding="true">
         <constraints>
-          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="8" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="40"/>
             <maximum-size width="300" height="40"/>
           </grid>
@@ -40,37 +41,18 @@
       </component>
       <component id="34d14" class="javax.swing.JPasswordField" binding="senha">
         <constraints>
-          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <maximum-size width="350" height="20"/>
+          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="400" height="25"/>
+            <maximum-size width="400" height="22"/>
           </grid>
         </constraints>
         <properties>
           <text value=""/>
-        </properties>
-      </component>
-      <component id="49ff0" class="javax.swing.JLabel" binding="bemVindo">
-        <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <font name="Arial Black" style="1"/>
-          <text value="Bem Vindo! "/>
-        </properties>
-      </component>
-      <component id="5247" class="javax.swing.JTextField" binding="Login">
-        <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <maximum-size width="350" height="20"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value=""/>
-          <visible value="true"/>
         </properties>
       </component>
       <component id="9f265" class="javax.swing.JButton" binding="Logar">
         <constraints>
-          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="7" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="40"/>
             <maximum-size width="300" height="40"/>
           </grid>
@@ -79,38 +61,96 @@
           <text value="Entrar"/>
         </properties>
       </component>
-      <component id="3b87a" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Login"/>
-        </properties>
-      </component>
       <component id="63451" class="javax.swing.JLabel">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="38" height="38"/>
+          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="38" height="19"/>
           </grid>
         </constraints>
         <properties>
-          <text value="Senha"/>
+          <text value="Senha:"/>
         </properties>
       </component>
       <vspacer id="5860a">
         <constraints>
-          <grid row="0" column="0" row-span="6" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+          <grid row="0" column="1" row-span="9" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
             <preferred-size width="30" height="-1"/>
           </grid>
         </constraints>
       </vspacer>
       <vspacer id="6ddd5">
         <constraints>
-          <grid row="0" column="3" row-span="6" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <preferred-size width="10" height="-1"/>
+          <grid row="0" column="5" row-span="9" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="80" height="-1"/>
           </grid>
         </constraints>
       </vspacer>
+      <vspacer id="c57a7">
+        <constraints>
+          <grid row="2" column="0" row-span="2" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+      <vspacer id="5bf84">
+        <constraints>
+          <grid row="2" column="6" row-span="2" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+      <vspacer id="96c60">
+        <constraints>
+          <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+      <component id="c27c2" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="33" height="25"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Label"/>
+          <visible value="false"/>
+        </properties>
+      </component>
+      <component id="ec3b" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="5" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="33" height="19"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Label"/>
+          <visible value="false"/>
+        </properties>
+      </component>
+      <component id="5247" class="javax.swing.JTextField" binding="Login">
+        <constraints>
+          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="400" height="25"/>
+            <maximum-size width="400" height="25"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value=""/>
+          <visible value="true"/>
+        </properties>
+      </component>
+      <component id="3b87a" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="38" height="25"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Login:"/>
+        </properties>
+      </component>
+      <hspacer id="40945">
+        <constraints>
+          <grid row="9" column="0" row-span="1" col-span="7" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="20"/>
+          </grid>
+        </constraints>
+      </hspacer>
     </children>
   </grid>
 </form>
